--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -39,6 +39,7 @@ cask "discord"
 cask "docker"
 cask "dropbox"
 cask "font-sauce-code-pro-nerd-font"
+cask "ghostty"
 cask "google-chrome"
 cask "homerow"
 cask "iterm2"
