refactor(ghostty): フォントのスタイル修正

--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -12,12 +12,12 @@ font-style-bold = false
 font-style-italic = false
 font-style-bold-italic = false
 
-font-thicken = true
-font-thicken-strength = 1
+# font-thicken = true
+# font-thicken-strength = 1
 
 alpha-blending = linear
 
-adjust-cell-width = -1
+# adjust-cell-width = -1
 # adjust-cell-height = 2
 
 window-theme = ghostty
