--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,7 +3,7 @@ tap "homebrew/bundle"
 brew "actionlint"
 brew "aria2"
 brew "bat"
-brew "commitizen"
+brew "czg"
 brew "duf"
 brew "dust"
 brew "eza"
