feat(commitlint,czg,tmux): ✨ tmuxのスクロール周り設定

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -146,6 +146,9 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
+# スクロールできる上限を増やす
+set-option -g history-limit 50000
+
 # コピーモードを設定する
 ## viのキーバインドを使用する
 # setw -g mode-keys vi
