fix(tmux): 🐛 prefix-highlightプラグインが効かなくなってた

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -174,22 +174,28 @@ bind -T copy-mode-vi Y send-keys -X copy-line
 ###### for Tmux Plugin Manager ######
 #####################################
 
+
 # List of plugins
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # tmux-powerより後にする
+set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-menus
 set -g @menus_trigger Space
 
 # tmux-power
-set -g @tmux_power_theme 'moon'
-# 'L' for left only, 'R' for right only and 'LR' for both
+set -g @tmux_power_theme 'violet'
 set -g @tmux_power_prefix_highlight_pos 'L'
+
+# tmux-prefix-highlight
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_show_sync_mode 'on'
+set -g @prefix_highlight_copy_prompt ' ⧉ COPY⧉ '
+set -g @prefix_highlight_sync_prompt ' ⚏ SYNC⚏ '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
