--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -33,20 +33,18 @@ brew "trash"
 brew "uv"
 brew "yarn"
 brew "zoxide"
-brew "zsh"
 
 cask "alt-tab"
+cask "claude"
 cask "cursor"
-cask "discord"
 cask "docker"
 cask "dropbox"
 cask "font-sauce-code-pro-nerd-font"
 cask "ghostty"
 cask "google-chrome"
-cask "homerow"
-cask "iterm2"
 cask "karabiner-elements"
 cask "meetingbar"
 cask "obsidian"
 cask "raycast"
 cask "simplenote"
+cask "slack"
