--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,5 +1,3 @@
-tap "homebrew/bundle"
-
 brew "actionlint"
 brew "aria2"
 brew "bat"
@@ -25,7 +23,7 @@ brew "ranger"
 brew "reattach-to-user-namespace"
 brew "ripgrep"
 brew "rlwrap"
-brew "romkatv/powerlevel10k/powerlevel10k"
+brew "powerlevel10k"
 brew "terminal-notifier"
 brew "tldr"
 brew "tmux"
