feat(mac,terminal): ✨ moralerspaceフォント

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -38,7 +38,7 @@ cask "claude"
 cask "cursor"
 cask "docker"
 cask "dropbox"
-cask "font-sauce-code-pro-nerd-font"
+cask "font-moralerspace"
 cask "ghostty"
 cask "google-chrome"
 cask "karabiner-elements"
