feat(tmux): ✨ 新しいwindow開く際にディレクトリを保持

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,9 @@ bind % split-window -h -c "#{pane_current_path}"
 # sでペインを横に分割する
 bind '"' split-window -v -c "#{pane_current_path}"
 
+# cで新しいウィンドウを現在ディレクトリで開く
+bind c new-window -c "#{pane_current_path}"
+
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
 bind -n S-left select-pane -L
