feat(tmux): ✨ ターミナルウィンドウリザイズ時に比率を均等にする

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -152,6 +152,9 @@ set -g visual-activity on
 # スクロールできる上限を増やす
 set-option -g history-limit 50000
 
+# ターミナルウィンドウをリサイズした時にペインの比率を均等にする
+set-hook -g client-resized 'select-layout tiled'
+
 # コピーモードを設定する
 ## viのキーバインドを使用する
 # setw -g mode-keys vi
