feat(tmux): ✨ ダブルクリックでタイルレイアウトに変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -155,6 +155,9 @@ set-option -g history-limit 50000
 # ターミナルウィンドウをリサイズした時にペインの比率を均等にする
 set-hook -g client-resized 'select-layout tiled'
 
+# ダブルクリックでタイルレイアウトに変更
+bind -n DoubleClick1Pane select-layout tiled
+
 # コピーモードを設定する
 ## viのキーバインドを使用する
 # setw -g mode-keys vi
