--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -1,7 +1,9 @@
 # Theme
+# theme = Andromeda
+# theme = Catppuccin Mocha
+# theme = Iceberg Dark
+theme = Mariana
 # theme = Tomorrow Night Eighties
-theme = catppuccin-mocha
-# theme = iceberg-dark
 
 # Font
 # font-family = JetBrainsMonoNL Nerd Font Mono
