fix(ghostty): 🐛 日本語フォント修正

--- a/terminal/ghostty/config
+++ b/terminal/ghostty/config
@@ -7,7 +7,10 @@ theme = Mariana
 
 # Font
 # font-family = JetBrainsMonoNL Nerd Font Mono
-font-family = Moralerspace
+# font-family = Moralerspace
+font-family = Monaco
+# 日本語用fallback
+font-family = Osaka
 font-feature = -dlig
 font-size = 13
 
