refactor(idea,vimfiles): ♻️ flashのキーバインドをsにする

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -164,4 +164,5 @@ xmap ; <Action>(flash.repeat)
 " enhance vim , (Repeat the last f/F/t/T search backward)
 nmap , <Action>(flash.repeat_backward)
 xmap , <Action>(flash.repeat_backward)
-map <leader>f <Action>(flash.search)
+nmap s <Action>(flash.search)
+xmap s <Action>(flash.search)
