feat(gitfiles): ✨ gh-dashにassignedタブ追加

--- a/gitfiles/gh/dash/config.yml
+++ b/gitfiles/gh/dash/config.yml
@@ -2,6 +2,9 @@ prSections:
 - title: My Pull Requests
   filters: is:open author:@me
   type: null
+- title: Assigned
+  filters: is:open assignee:@me
+  type: null
 - title: Needs My Review
   filters: is:open review-requested:@me
   type: null
