fix(mac): 🐛 brewfile修正

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,3 +1,5 @@
+tap "aku11i/tap"
+
 brew "actionlint"
 brew "aku11i/tap/phantom"
 brew "aria2"
@@ -38,10 +40,9 @@ brew "zoxide"
 cask "alt-tab"
 cask "claude"
 cask "cursor"
-cask "docker"
+cask "docker-desktop"
 cask "dropbox"
 cask "font-meslo-for-powerlevel10k"
-cask "font-moralerspace"
 cask "ghostty"
 cask "google-chrome"
 cask "karabiner-elements"
@@ -63,6 +64,5 @@ vscode "usernamehw.errorlens"
 vscode "voidei.vscode-vimrc"
 
 mas "CompareMerge2", id: 1459748650
-mas "Simplenote", id: 692867256
 mas "Toggl Track", id: 1291898086
 mas "Tot", id: 1491071483
