--- a/.czrc
+++ b/.czrc
@@ -78,7 +78,7 @@
   "customScopesAlign": "bottom",
   "customScopesAlias": "custom",
   "emptyScopesAlias": "empty",
-  "upperCaseSubject": false,
+  "upperCaseSubject": null,
   "markBreakingChangeMode": false,
   "allowBreakingChanges": [
     "feat",
