feat(mac): ✨ geminiのsettings.jsonのsymlink確認スクリプト

--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -1,36 +1,1 @@
-{
-  "tools": {
-    "autoAccept": false,
-    "exclude": [
-      "dangerous_tool"
-    ],
-    "sandbox": true
-  },
-  "privacy": {
-    "usageStatisticsEnabled": false
-  },
-  "general": {
-    "checkpointing": {
-      "enabled": true
-    }
-  },
-  "context": {
-    "fileFiltering": {
-      "respectGitIgnore": true,
-      "enableRecursiveFileSearch": true
-    }
-  },
-  "ide": {
-    "enabled": true
-  },
-  "security": {
-    "auth": {
-      "selectedType": "oauth-personal"
-    }
-  },
-  "ui": {
-    "theme": "Default",
-    "hideBanner": true,
-    "hideTips": false
-  }
-}
+{"modified_by_gemini": true, "new_setting": "test"}
