refactor(ai): ♻️ sandboxを無効化
serena MCPが使えなくなるので無効化

--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -4,7 +4,7 @@
     "exclude": [
       "dangerous_tool"
     ],
-    "sandbox": true
+    "sandbox": false
   },
   "privacy": {
     "usageStatisticsEnabled": false
@@ -31,7 +31,7 @@
   "ui": {
     "theme": "Default",
     "hideBanner": true,
-    "hideTips": false
+    "hideTips": true
   },
   "mcpServers": {
     "Context7": {
