feat(mac): ✨ vimmotionとice追加

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,4 +1,5 @@
 tap "aku11i/tap"
+tap "dwarvesf/homebrew-tap"
 
 brew "actionlint"
 brew "aku11i/tap/phantom"
@@ -33,6 +34,7 @@ brew "tldr"
 brew "tmux"
 brew "trash"
 brew "uv"
+brew "vimmotion"
 brew "yarn"
 brew "zoxide"
 
@@ -44,6 +46,7 @@ cask "dropbox"
 cask "font-meslo-for-powerlevel10k"
 cask "ghostty"
 cask "google-chrome"
+cask "jordanbaird-ice"
 cask "karabiner-elements"
 cask "meetingbar"
 cask "obsidian"
