fix(mac): 🐛 vimmotionはcask

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -34,7 +34,6 @@ brew "tldr"
 brew "tmux"
 brew "trash"
 brew "uv"
-brew "vimmotion"
 brew "yarn"
 brew "zoxide"
 
@@ -53,6 +52,7 @@ cask "obsidian"
 cask "raycast"
 cask "simplenote"
 cask "slack"
+cask "vimmotion"
 
 vscode "alefragnani.bookmarks"
 vscode "anthropic.claude-code"
