refactor(gemini): ♻️ 設定修正

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -28,6 +28,7 @@
         "commitlint",
         "czg",
         "configs",
+        "gemini",
         "gitfiles",
         "ghostty",
         "idea",
