feat(tmux): ✨ 非アクティブpaneの色を変える

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,13 @@ setw -g window-status-current-style fg=white,bg=black,bright
 # 最後に選択したウィンドウの色
 setw -g window-status-last-style fg=blue,bg=default,bright
 
+# フォーカスイベントを有効化（ペインdim機能に必要）
+set -g focus-events on
+
+# ペイン切り替え時にスタイルを強制適用（Vimのcolorscheme上書き対策）
+set-hook -g pane-focus-out 'select-pane -P bg=colour240,fg=colour247'
+set-hook -g pane-focus-in 'select-pane -P bg=default,fg=default'
+
 # Copy mode colors
 set-window-option -g mode-style fg=colour3,bg=colour0
 
