feat(ai,mac,shell,tmux): ✨ workmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,10 @@ setw -g window-status-current-style fg=white,bg=black,bright
 # 最後に選択したウィンドウの色
 setw -g window-status-last-style fg=blue,bg=default,bright
 
+# for workmux
+set -g window-status-format '#I:#W#{?@workmux_status, #{@workmux_status},}#{?window_flags,#{window_flags}, }'
+set -g window-status-current-format '#I:#W#{?@workmux_status, #{@workmux_status},}#{?window_flags,#{window_flags}, }'
+
 # フォーカスイベントを有効化（ペインdim機能に必要）
 set -g focus-events on
 
@@ -196,7 +200,7 @@ set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'wfxr/tmux-power'
+# set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # tmux-powerより後にする
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -204,8 +208,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @menus_trigger Space
 
 # tmux-power
-set -g @tmux_power_theme 'violet'
-set -g @tmux_power_prefix_highlight_pos 'L'
+# set -g @tmux_power_theme 'violet'
+# set -g @tmux_power_prefix_highlight_pos 'L'
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_show_copy_mode 'on'
