--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -2,7 +2,6 @@ tap "aku11i/tap"
 tap "dwarvesf/homebrew-tap"
 
 brew "actionlint"
-brew "aku11i/tap/phantom"
 brew "aria2"
 brew "bat"
 brew "claude-squad"
@@ -27,6 +26,7 @@ brew "mas"
 brew "neovim"
 brew "nvm"
 brew "powerlevel10k"
+brew "raine/workmux/workmux"
 brew "reattach-to-user-namespace"
 brew "ripgrep"
 brew "rlwrap"
