perf(tmux): ⚡ 設定改良

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,23 +14,30 @@ setw -g pane-base-index 1
 # ウィンドウ(タブ)を閉じた時、ウインドウ番号を付番をしなおす
 set-option -g renumber-windows on
 
-# ------------------- #
-# ステータスバーの見た目 #
-# ------------------- #
+# =============== #
+# 色とスタイル設定 #
+# =============== #
 
 # 色コード: http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html
 
-# 256色サポート
-set-option -g default-terminal "xterm"
+# TrueColorサポート
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",*256col*:Tc"
 
-# 非アクティブなウィンドウの色
+# ペインの境界線スタイル
+set -g pane-border-style fg=colour240
+set -g pane-active-border-style fg=colour51
+
+# ウィンドウスタイル
 setw -g window-status-style fg=cyan,bg=default,dim
-
-# アクティブなウィンドウの色
 setw -g window-status-current-style fg=white,bg=black,bright
-
-# 最後に選択したウィンドウの色
 setw -g window-status-last-style fg=blue,bg=default,bright
+
+# コピーモードの色
+set-window-option -g mode-style fg=colour3,bg=colour0
+
+# コマンドラインの色
+set -g message-style fg=black,bg=yellow,bright
 
 # for workmux
 set -g window-status-format '#I:#W#{?@workmux_status, #{@workmux_status},}#{?window_flags,#{window_flags}, }'
@@ -42,12 +49,6 @@ set -g focus-events on
 # ペイン切り替え時にスタイルを強制適用（Vimのcolorscheme上書き対策）
 set-hook -g pane-focus-out 'select-pane -P bg=colour240,fg=colour247'
 set-hook -g pane-focus-in 'select-pane -P bg=default,fg=default'
-
-# Copy mode colors
-set-window-option -g mode-style fg=colour3,bg=colour0
-
-# コマンドラインの色を設定する
-set -g message-style fg=black,bg=yellow,bright
 
 # ステータスバーを設定する
 # ステータスバーの位置
@@ -126,10 +127,7 @@ bind w kill-window
 bind q kill-session
 
 # ペイン終了
-# bind k kill-pane
 bind x kill-pane
-# ウィンドウ終了
-# bind K kill-window
 # ペイン番号表示
 bind i display-panes
 
@@ -145,15 +143,8 @@ bind y paste-buffer
 # これを有効にすると、MacでCommand+Cなどができなくなるが、Optionを押しながら範囲選択すると、コピーできる。
 # http://qiita.com/jyotti/items/70a3a8035d767f99f93d
 set-option -g mouse on
-# スクロールを無理やり有効にする
-# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
-
-# UTF8 Support
-# setw -g utf8 on
-## ステータスバーのUTF-8サポートを有効にする
-# set -g status-utf8 on
-## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 30
+# リフレッシュの間隔を設定する(ステータスバー右が空なので無効化)
+set -g status-interval 0
 ## ウィンドウリストの位置を中心寄せにする
 set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
@@ -174,12 +165,11 @@ bind -n DoubleClick1Pane select-layout tiled
 # setw -g mode-keys vi
 set-window-option -g mode-keys vi
 # http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
-## クリップボード共有を有効にする
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# クリップボード共有(macOS 10.12.2以降はtmux標準で対応済み)
 set-environment -g IS_WARP $IS_WARP
 ## コピーモードの操作をvi風に設定する
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-selection
 bind-key -T copy-mode-vi u send-keys -X halfpage-up
 bind-key -T copy-mode-vi d send-keys -X halfpage-down
@@ -216,6 +206,17 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 set -g @prefix_highlight_copy_prompt ' ⧉ COPY⧉ '
 set -g @prefix_highlight_sync_prompt ' ⚏ SYNC⚏ '
+
+# ========== #
+# その他設定 #
+# ========== #
+
+# ペイン番号の表示時間延長(デフォルト1秒は短い)
+set -g display-panes-time 3000
+
+# ウィンドウ名の自動変更を抑制
+setw -g automatic-rename off
+set -g allow-rename off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
