refactor(tmux): ♻️ conf修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,18 @@
 # 使うshellをfishにする
-set-option -g default-shell $SHELL
+set -g default-shell $SHELL
 
 # ----------------- #
 # ウィンドウの振る舞い #
 # ----------------- #
 
 ## ウィンドウ番号1から開始する
-set-option -g base-index 1
+set -g base-index 1
 
 # ペインのインデックスを1から始める
-setw -g pane-base-index 1
+set -gw pane-base-index 1
 
 # ウィンドウ(タブ)を閉じた時、ウインドウ番号を付番をしなおす
-set-option -g renumber-windows on
+set -g renumber-windows on
 
 # =============== #
 # 色とスタイル設定 #
@@ -21,20 +21,20 @@ set-option -g renumber-windows on
 # 色コード: http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html
 
 # TrueColorサポート
-set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # ペインの境界線スタイル
 set -g pane-border-style fg=colour240
 set -g pane-active-border-style fg=colour51
 
 # ウィンドウスタイル
-setw -g window-status-style fg=cyan,bg=default,dim
-setw -g window-status-current-style fg=white,bg=black,bright
-setw -g window-status-last-style fg=blue,bg=default,bright
+set -gw window-status-style fg=cyan,bg=default,dim
+set -gw window-status-current-style fg=white,bg=black,bright
+set -gw window-status-last-style fg=blue,bg=default,bright
 
 # コピーモードの色
-set-window-option -g mode-style fg=colour3,bg=colour0
+set -gw mode-style fg=colour3,bg=colour0
 
 # コマンドラインの色
 set -g message-style fg=black,bg=yellow,bright
@@ -48,22 +48,15 @@ set-hook -g pane-focus-in 'select-pane -P bg=default,fg=default'
 
 # ステータスバーを設定する
 # ステータスバーの位置
-set-option -g status-position bottom
+set -g status-position bottom
 
 # ステータスバーの色を設定する
-# 暗いカラースキームの時
-# set -g status-bg black
-# set -g status-fg white
-# 明るいカラースキームの時
-# set -g status-bg white
-# set -g status-fg black
-# status line の背景色を指定する。
-set-option -g status-style fg=white,bg=black
+set -g status-style fg=white,bg=black
 
 # tmuxウィンドウのタイトルをiTerm2タブ/ウィンドウのタイトルとして表示される
 # https://qiita.com/yamasaki-masahide/items/2a9991631fc06cbbc345
-set-option -g set-titles on
-set-option -g set-titles-string '#T'
+set -g set-titles on
+set -g set-titles-string '#T'
 
 ## 左パネルを設定する
 set -g status-left-length 40
@@ -138,17 +131,17 @@ bind y paste-buffer
 # マウス操作を有効にする
 # これを有効にすると、MacでCommand+Cなどができなくなるが、Optionを押しながら範囲選択すると、コピーできる。
 # http://qiita.com/jyotti/items/70a3a8035d767f99f93d
-set-option -g mouse on
+set -g mouse on
 # リフレッシュの間隔を設定する(ステータスバー右が空なので無効化)
 set -g status-interval 0
 ## ウィンドウリストの位置を中心寄せにする
 set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
+set -gw monitor-activity on
 set -g visual-activity on
 
 # スクロールできる上限を増やす
-set-option -g history-limit 50000
+set -g history-limit 10000
 
 # ターミナルウィンドウをリサイズした時にペインの比率を均等にする
 set-hook -g client-resized 'select-layout tiled'
@@ -158,11 +151,8 @@ bind -n DoubleClick1Pane select-layout tiled
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-# setw -g mode-keys vi
-set-window-option -g mode-keys vi
-# http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
-# クリップボード共有(macOS 10.12.2以降はtmux標準で対応済み)
-set-environment -g IS_WARP $IS_WARP
+# set -gw mode-keys vi
+set -gw mode-keys vi
 ## コピーモードの操作をvi風に設定する
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
@@ -186,16 +176,11 @@ set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'wfxr/tmux-power'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # tmux-powerより後にする
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-menus
 set -g @menus_trigger Space
-
-# tmux-power
-# set -g @tmux_power_theme 'violet'
-# set -g @tmux_power_prefix_highlight_pos 'L'
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_show_copy_mode 'on'
@@ -211,7 +196,7 @@ set -g @prefix_highlight_sync_prompt ' ⚏ SYNC⚏ '
 set -g display-panes-time 3000
 
 # ウィンドウ名の自動変更を抑制
-setw -g automatic-rename off
+set -gw automatic-rename off
 set -g allow-rename off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
