--- a/.tmux.conf
+++ b/.tmux.conf
@@ -176,11 +176,16 @@ set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'roosta/tmux-pop'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'wfxr/tmux-power'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # tmux-powerより後にする
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux-menus
 set -g @menus_trigger Space
+
+# tmux-power
+set -g @tmux_power_theme 'violet'
+set -g @tmux_power_prefix_highlight_pos 'L'
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_show_copy_mode 'on'
