--- a/.ideavimrc
+++ b/.ideavimrc
@@ -104,6 +104,23 @@ nnoremap go :action SearchEverywhere<CR>
 nnoremap ]d :action GotoNextError<CR>
 nnoremap [d :action GotoPreviousError<CR>
 
+" システムクリップボード操作
+nnoremap <leader>y "+y
+vnoremap <leader>y "+y
+nnoremap <leader>Y "+y$
+nnoremap <leader>d "+d
+vnoremap <leader>d "+d
+nnoremap <leader>D "+D
+nnoremap <leader>c "+c
+vnoremap <leader>c "+c
+nnoremap <leader>C "+C
+nnoremap <leader>x "+x
+vnoremap <leader>x "+x
+nnoremap <leader>p "+p
+nnoremap <leader>P "+P
+vnoremap <leader>p "+p
+vnoremap <leader>P "+P
+
 
 """ Plugin settings -------------------------
 
