feat(gemini): ✨ Geminiの完了通知

--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -97,5 +97,18 @@
   "output": {
     "format": "text"
   },
+  "hooks": {
+    "AfterAgent": [
+      {
+        "matcher": "",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "~/.gemini/hooks/notification.sh"
+          }
+        ]
+      }
+    ]
+  },
   "_disabledMcpServers": {}
 }
