feat(gemini): ✨ geminiの状態でtmuxのアイコンを変える

--- a/ai/gemini/settings.json
+++ b/ai/gemini/settings.json
@@ -105,6 +105,10 @@
           {
             "type": "command",
             "command": "~/.gemini/hooks/notification.sh --event after_agent"
+          },
+          {
+            "type": "command",
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py after_agent"
           }
         ]
       }
@@ -116,6 +120,10 @@
           {
             "type": "command",
             "command": "~/.gemini/hooks/notification.sh --event before_tool"
+          },
+          {
+            "type": "command",
+            "command": "python3 ~/.gemini/hooks/gemini-hook.py before_tool"
           }
         ]
       }
